--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,13 @@ input, button, textarea {
 input::-ms-clear {
   display: none;
 }
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button{
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+
 
 button {
   cursor: pointer;
@@ -327,12 +334,7 @@ html {
   padding-top: 173px;
 }
 .newsletter__form {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  text-align: center;
 }
 .newsletter__mail {
   margin-right: 20px;
